css/popup-style.css
/* ... */
.wppb-popup-name{
       margin: 24px 0;
}
.wppb-popup-name > div {
     font-size: 14px;
    color: #9E9E9E;
    letter-spacing: 0.02em;
    font-weight: 500;
    display: flex;
    align-items: center;
    justify-content: center;
}
.wppb-popup-name > div > input{
    margin-left: 55px;
    border: 1px solid #D8D8D8;
    color: inherit;
    letter-spacing: 1px;
    width: 373px;
    font-size: 18px;
    padding: 4px 12px;
}
.wppb-popup-name > div > input:focus{
    border: 1px solid #8a8888;
    box-shadow: none;
    outline: none;
}

.prebulilt-popup-inner .wppb-popup-custom-content{
        padding: unset;
}
.prebulilt-popup-inner img{
    max-width: 100%;
}
.prebulilt-popup-inner span{
        display: block;
    text-align: center;
    width: 100%;
}
/*business popup custom popup css*/
.wppb-popup-demo .wppb-popup-custom{
    padding: 5rem 0;
    width: fit-content;
    min-width: 832px;
    max-width: 1000px;
    margin: 36px auto 36px;
    border-radius: 2px;
    background-color: #00000021;
    perspective: 108px;
    position: relative;
    height: max-content;
    /*display: none;*/
    font-size: 10px;
}
.wppb-popup-demo .wppb-popup-custom > div{
    width: fit-content;
    margin: auto;
    position: relative;
}

.wppb-popup-demo .wppb-popup-custom .wppb-popup-custom-content .data-rl-editable-wrap > span,
.wppb-prebuilt-popup-json .wppb-popup-custom-wrapper .wppb-popup-custom-content div span{
          display: block;
    line-height: 1;
    color: #cacaca;
    font-size: 16px;
    text-align: center;
    width: 100%;
    margin: 3px 0;
    font-weight: normal;
    letter-spacing: 1px;
    padding: 1px 0;
    position: relative;
    box-sizing: border-box;
}
.wppb-popup-demo .wppb-popup-custom  .wppb-popup-lead-form .leadform-show-form span{
        font-weight: normal;
    color: #cacaca;
    font-size: 16px;
}
.wppb-popup-custom-wrapper{
        position: relative;
    margin: auto;
    width: 550px;
    overflow: hidden;
}
.wppb-popup-overlay-custom-img{
        position: absolute;
    height: 100%;
    width: 100%;
    z-index: 2;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: left bottom;
    /*border-radius: inherit;*/
}
.wppb-popup-custom-overlay{
        position: absolute;
    width: 100%;
    height: 100%;
    z-index: 2;
    /*border-radius: inherit;*/
}
.wppb-popup-custom-content{
    z-index: 4;
    position: relative;
    padding: 23px 37px 23px;
    overflow-x: initial;
}
.wppb-popup-custom img{
    max-width: 100%;
    max-height: 100%;
    box-sizing: border-box;
}
.data-rl-editable-wrap{
    position: relative;
    display: flex;
}
.data-rl-editable-wrap .actions_{
        position: absolute;
    right: -2px;
    top: -2px;
    z-index: 4;
    opacity: 0;
    transition: .2s all linear;
}
.wppb-popup-demo .wppb-popup-custom .wppb-popup-custom-content .data-rl-editable-wrap .actions_ > span{
    font-size: 15px;
    text-align: center;
    height: auto;
    width: auto;
    color: #F5F5F5;
    cursor: pointer;
    background: #6647E6;
    border-radius: 2px;
}
.wppb-popup-custom .data-rl-editable-wrap:hover .actions_{
    opacity: 1;
}
/*editable section */

.rl-editable-key-action:not(img){
        position: relative;
    outline: 1px solid #6747e6;
    outline-offset: -1px;
    outline-style: dotted;
}
.wppb-popup-custom [data-rl-editable]:not([data-rl-editable="image"]):hover,
.wppb-popup-custom .wppb-popup-lead-form:hover,
.wppb-popup-custom .data-rl-editable-wrap.wrap-image_:hover{
          outline: 1px solid #6747e6;
    cursor: pointer;
    outline-offset: -1px;
    outline-style: dotted;
}
.wppb-popup-custom [data-rl-editable]:before,
.wppb-popup-custom .wppb-popup-lead-form:before,
.wppb-popup-custom .data-rl-editable-wrap.wrap-image_:before{
        content: 'Text';
    font-size: 14px;
    position: absolute;
    background: #6747e6;
    color: #f3f3f3;
    left: 0px;
    top: -16px;
    display: none;
    z-index: 2;
    padding: 0px 10px;
    line-height: 17px;
    border-radius: 3px 3px 0px 0px;
}
.wppb-popup-custom [data-rl-editable="heading"]:before{
        content: 'Heading';
}
.wppb-popup-custom .data-rl-editable-wrap.wrap-image_:before{
        content: 'Image';
}
.wppb-popup-custom [data-rl-editable="link"]:before{
        content: 'Link';
}
.wppb-popup-custom .wppb-popup-lead-form:before{
        content: 'Form';
}
.wppb-popup-custom [data-rl-editable]:hover:before,
.wppb-popup-custom .wppb-popup-lead-form:hover:before,
.wppb-popup-custom .data-rl-editable-wrap.wrap-image_:hover:before{
    display: block;
}
.wppb-popup-demo .wppb-popup-custom span.text-heading{
        font-size: 27px;
    font-weight: 500;
}
/*lead form builder design*/
.wppb-popup-lead-form{
    width: 100%;
}
.wppb-popup-lead-form .leadform-show-form{
        max-width: 100%;
    padding: 4px;
}
.wppb-popup-lead-form .lead-form-front{
        padding: 15px;
    background-size: 100%;
    box-sizing: border-box;
    /*max-height: 250px;*/
    /*overflow-y: scroll;*/
}
.wppb-popup-lead-form .lead-form-front ul,.wppb-popup-lead-form .lead-form-front li{
    margin: 0;
}
.wppb-popup-lead-form .leadform-show-form input[type='submit']{
       padding: 10px 30px;
    border-color: #000;
    border-radius: 3px;
    text-transform: uppercase;
    font-size: 18px;
    font-weight: 700;
    color: #fff;
    cursor: pointer;
    background: #0C0C10;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
    white-space: inherit;
    width: fit-content;
    max-width: unset;
}
.wppb-popup-lead-form.lf_submit_center .submit-type.lf-field{
    text-align: center;
}
.wppb-popup-lead-form.lf_submit_right .submit-type.lf-field{
    text-align: right;
}
/* ... */

